editors/tree-sitter-dippin/test/corpus/basic.txt
================================================================================
Format version declaration
================================================================================

dip 2

workflow Hello
  start: Begin
  exit: End

  agent Begin
    prompt: hi

  edges
    Begin -> End

--------------------------------------------------------------------------------

(source_file
  (version_decl
    (identifier))
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry (identifier) (identifier))))))

================================================================================
Minimal workflow
================================================================================

workflow Hello
  start: Begin
  exit: End

  agent Begin
    prompt: Hello world

  agent End
    prompt: Goodbye

  edges
    Begin -> End

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry (identifier) (identifier))))))

================================================================================
Parallel and fan_in
================================================================================

workflow Parallel
  start: Start
  exit: End

  agent Start
    prompt: go

  parallel Fan -> A, B

  agent A
    prompt: branch A

  agent B
    prompt: branch B

  fan_in Join <- A, B

  agent End
    prompt: done

  edges
    Start -> Fan
    Fan -> A
    Fan -> B
    A -> Join
    B -> Join
    Join -> End

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (parallel_node
          (identifier)
          (identifier_list (identifier) (identifier))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (fan_in_node
          (identifier)
          (identifier_list (identifier) (identifier))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry (identifier) (identifier))
        (edge_entry (identifier) (identifier))
        (edge_entry (identifier) (identifier))
        (edge_entry (identifier) (identifier))
        (edge_entry (identifier) (identifier))
        (edge_entry (identifier) (identifier))))))

================================================================================
Edge with condition
================================================================================

workflow Cond
  start: A
  exit: C

  agent A
    auto_status: true
    prompt: check

  agent B
    prompt: fix

  agent C
    prompt: done

  edges
    A -> C  when ctx.outcome = success
    A -> B  when ctx.outcome = fail

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr
            (condition
              (or_expr
                (and_expr
                  (compare_expr
                    (operand (variable (identifier) (identifier)))
                    (compare_op)
                    (operand (identifier))))))))
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr
            (condition
              (or_expr
                (and_expr
                  (compare_expr
                    (operand (variable (identifier) (identifier)))
                    (compare_op)
                    (operand (identifier))))))))))))

================================================================================
Manager loop node
================================================================================

workflow Sup
  start: M
  exit: Done

  manager_loop M
    subgraph_ref: inner
    poll_interval: 30s
    max_cycles: 12

  agent Done
    prompt: done

  edges
    M -> Done

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (manager_loop_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))
          (node_field (field_name (identifier)) (field_value (raw_inline)))
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry (identifier) (identifier))))))

================================================================================
Conditional node
================================================================================

workflow Gate
  start: Analyze
  exit: Done

  agent Analyze
    auto_status: true
    prompt: check

  conditional Route
    label: "Route by Outcome"

  agent Done
    prompt: done

  edges
    Analyze -> Route
    Route -> Done  when ctx.outcome = success

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (conditional_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (string)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry (identifier) (identifier))
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr
            (condition
              (or_expr
                (and_expr
                  (compare_expr
                    (operand (variable (identifier) (identifier)))
                    (compare_op)
                    (operand (identifier))))))))))))

================================================================================
Parallel and fan_in with params block
================================================================================

workflow PP
  start: Fan
  exit: Join

  parallel Fan -> A, B
    params:
      fan_in_policy: all

  fan_in Join <- A, B
    params:
      quorum: 2

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field
        (field_value
          (raw_inline)))
      (workflow_field
        (field_value
          (raw_inline)))
      (node_decl
        (parallel_node
          (identifier)
          (identifier_list
            (identifier)
            (identifier))
          (node_attr_block
            (node_field
              (field_name
                (identifier))
              (field_value
                (multiline_block
                  (block_content
                    (block_line))))))))
      (node_decl
        (fan_in_node
          (identifier)
          (identifier_list
            (identifier)
            (identifier))
          (node_attr_block
            (node_field
              (field_name
                (identifier))
              (field_value
                (multiline_block
                  (block_content
                    (block_line)))))))))))

================================================================================
Edge with on shorthand
================================================================================

workflow On
  start: A
  exit: B

  agent A
    prompt: check

  agent B
    prompt: done

  edges
    A -> B  on success
    A -> B  on setup-failed  label: lf

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr (identifier)))
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr (identifier))
          (edge_attr (field_value (raw_inline))))))))

================================================================================
Edge with loop keyword
================================================================================

workflow Loop
  start: A
  exit: B

  agent A
    prompt: check

  agent B
    prompt: done

  edges
    A -> B  on fail  loop
    A -> B  loop

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr (identifier))
          (edge_attr))
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr))))))

================================================================================
Single-quoted string value
================================================================================

workflow Gate
  start: Route
  exit: Route

  conditional Route
    label: 'It''s routed'

  edges
    Route -> Route

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (conditional_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (string)))))
      (edges_section
        (edge_entry (identifier) (identifier))))))

================================================================================
Single-quoted edge label and condition
================================================================================

workflow SQEdge
  start: A
  exit: B

  agent A
    prompt: go

  agent B
    prompt: stop

  edges
    A -> B  when ctx.reason = 'gave up'  label: 'try again'

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr
            (condition
              (or_expr
                (and_expr
                  (compare_expr
                    (operand (variable (identifier) (identifier)))
                    (compare_op)
                    (operand (string)))))))
          (edge_attr
            (field_value (string))))))))

================================================================================
Edge with choice routing key
================================================================================

workflow Choice
  start: Gate
  exit: Done

  human Gate
    mode: choice

  agent Done
    prompt: done

  edges
    Gate -> Done  label: "Approve"  choice: "yes"

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (human_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr (field_value (string)))
          (edge_attr (field_value (string))))))))

================================================================================
Section-level else default
================================================================================

workflow Funnel
  start: T
  exit: Done

  agent T
    prompt: go

  agent Cleanup
    prompt: clean

  edges
    T -> Done  when ctx.outcome = success
    else -> Cleanup

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry
          (identifier)
          (identifier)
          (edge_attr
            (condition
              (or_expr
                (and_expr
                  (compare_expr
                    (operand (variable (identifier) (identifier)))
                    (compare_op)
                    (operand (identifier))))))))
        (else_default (identifier))))))
